cases/tests/nginx-ingress/otel_log_format/resource/otel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-echo
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
  - host: otel.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-echo
            port:
              number: 5678
